-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 251100) **
-----------------------------------------------------------------------

About the version numbers... "vx.y.zRt" :

  x = major version  - the overall development status
  y = devel-series   - represents a set of planned features
  z = minor version  - version number of the current development series
  Rt = 'rx'          - stable release number x
  Rt = 'dx'  	     - development version

-----------------------------------------------------------------------

Last officially released version is -*> v1.8.2r14 <*-

??112000 (v1.8.5d15)
	- added: tremolo effect (-eemt) [rcs]
	- added: -z:db; i/o double buffering layer is back! - 
		 after complete rewrite, db-mode now supports all
		 non-realtime audio objects, and works both for 
		 input and output
	- added: default-double-buffer-size added to ~/.ecasoundrc
	- added: double buffer size can be given as the 2nd 
		 argument of -z:db,dbsize
	- added: optional argument for -r:sched_priority; specify 
		 the static rt-priority; see ecasound(1)
	- added: default-schedpriority added to ~/.ecasoundrc
	- added: 32bit support for OSS/Linux
	- added: comments lines (#-prefixed lines) allowed when
		 loading chainsetups from file
	- added: ecatools - ecasignalview added to the package; 
		 see ecatools(1) man page for details
	- removed: the "LADSPA/" prefix removed from plugin labels
	- changed: more intelligent handling of resource files
	           (for instance ~/.ecasoundrc and preset files)
	- changed: output produced by -ev
	- changed: updated ALSA 0.6.x support to match pcmfinal-state
	- fixed: nasty bug in effect preset mapping
	- fixed: -ei:0 caused problems
	- fixed: cdr-file endianess (should be _always_ big endian)
	- fixed: yet more fixes to mono mp3 input handling
07112000 (v1.8.4d15)
	- added: pulse gate (-eemp); can be used to generate a
	         metronome signal [rcs]