@@ -1,15 +1,28 @@
 dnl ---
+dnl Ecasound configure.in
+dnl Many of the tests and macros in this file have been borrowed from 
+dnl other packages (Alsaplayer, ALSA, SIP, PyQt, kpackage, etc, etc).
+dnl ---
+
+dnl ------------------------------------------------------------------
+
+dnl ---
 dnl Process this file with autoconf to produce a configure script.
 dnl ---
 AC_INIT(libecasound/audiofx.h)
 
+dnl ------------------------------------------------------------------
+
 dnl ---
 dnl Init automake
 dnl ---
-dnl !!!
+dnl -- >                   !!!!!!!!!
 dnl remember to update eca-version.h
 AM_INIT_AUTOMAKE(ecasound, 1.8.5d15)
+dnl <--                    !!!!!!!!!
 AM_CONFIG_HEADER(config.h)
+
+dnl ------------------------------------------------------------------
 
 dnl ---
 dnl Checks for programs.
@@ -20,6 +33,8 @@ AC_PROG_CPP
 AC_PROG_MAKE_SET
 dnl AC_PROG_RANLIB
 AC_PROG_INSTALL
+
+dnl ------------------------------------------------------------------
 
 dnl --
 dnl Libtool
@@ -40,6 +55,8 @@ AC_SUBST(ACLOCAL)
 AC_SUBST(AUTOCONF)
 AC_SUBST(AUTOMAKE)
 
+dnl ------------------------------------------------------------------
+
 dnl ---
 dnl Sets experimental
 dnl ---
@@ -51,11 +68,15 @@ AC_DEFINE(FEELING_EXPERIMENTAL)
 fi
 AM_CONDITIONAL(FEELING_EXPERIMENTAL, test x$experimental = xyes)
 
+dnl ------------------------------------------------------------------
+
 dnl ---
 dnl Set CXXFLAGS.
 dnl ---
 CXXFLAGS="-O2 -D_REENTRANT -DNDEBUG -ffast-math -fstrict-aliasing -funroll-loops"
 dnl CXXFLAGS="-O2 -D_REENTRANT -fomit-frame-pointer -finline-functions -ffast-math -funroll-loops -Wall -Wstrict-prototypes -pedantic -fstrict-aliasing"
+
+dnl ------------------------------------------------------------------
 
 dnl ---
 dnl Set up some operating system specific options
@@ -83,12 +104,14 @@ case "$host" in
                ;;
 esac
 
+dnl ------------------------------------------------------------------
+
 AC_ARG_ENABLE(debug,
 [  --enable-debug		  Enable debugging (default = no)],
 include_debug=yes)
 AM_CONDITIONAL(INCLUDE_DEBUG, test x$include_debug = xyes)
 if test x$include_debug = xyes; then
-CXXFLAGS="-D_REENTRANT -DENABLE_DBC -g -Wall -Wstrict-prototypes -O2 -ffast-math"
+CXXFLAGS="-D_REENTRANT -DENABLE_DBC -g -Wall -Wstrict-prototypes -ffast-math"
 dnl LDFLAGS="-pg -pedantic -funroll-loops"
 fi                                     
 
@@ -98,6 +121,8 @@ enable_dbc=yes)
 if test x$enable_dbc = xyes; then
 CXXFLAGS="$CXXFLAGS -DENABLE_DBC"
 fi                                     
+
+dnl ------------------------------------------------------------------
 
 dnl ---
 dnl Checks for functions.
@@ -133,6 +158,8 @@ if test x$termcap_library = xncurses; then
 	AC_DEFINE(USE_NCURSES)
 fi
 
+dnl ------------------------------------------------------------------
+
 dnl ---
 dnl POSIX.4 threads
 dnl ---
@@ -140,11 +167,15 @@ AC_CHECK_LIB(pthread,pthread_create, [],
 	AC_CHECK_LIB(c_r,pthread_create, [],
 		AC_MSG_ERROR([** POSIX.4 threads not installed or broken **])))
 
+dnl ------------------------------------------------------------------
+
 dnl ---
 dnl Check for already installed libkvutils
 dnl ---
 AC_CHECK_LIB(kvutils,main,kvutils_installed=yes,kvutils_installed=no)
 AM_CONDITIONAL(KVUTILS_INSTALLED, test x$kvutils_installed = xyes)
+
+dnl ------------------------------------------------------------------
 
 dnl ---
 dnl Audiofile library
@@ -249,6 +280,8 @@ if test x$arts_support = xyes; then
 AC_DEFINE(COMPILE_ARTS)
 fi                                     
 
+dnl ------------------------------------------------------------------
+
 dnl --
 dnl readline library
 dnl --
@@ -300,6 +333,8 @@ else
   AC_CONFIG_SUBDIRS(readline-4.0)
 fi
 
+dnl ------------------------------------------------------------------
+
 dnl ---
 dnl Checks for header files.
 dnl ---
@@ -315,12 +350,74 @@ if test "x$nostlmap" = "x1" ; then
 	AC_MSG_ERROR([C++ header files not found! Searched for 'map.h' (STL).])
 fi
 
+dnl ------------------------------------------------------------------
+
+dnl ---
+dnl Python header files
+dnl ---
+eca_python_incdir=
+AC_MSG_CHECKING([for Python include files])
+
+AC_ARG_WITH(python-includes, [  --with-python-includes=DIR  Python include files are in DIR])
+if test ! "X$with_python_includes" = "X"
+then
+	python_incdirs=$with_python_includes
+else
+	python_incdirs="/usr/local/include/python2.0 /usr/include/python2.0 /usr/local/include/python1.6 /usr/include/python1.6 /usr/local/include/python1.5 /usr/include/python1.5 /usr/local/include /usr/include"
+fi
+
+for d in $python_incdirs
+do
+	if test -r $d/Python.h
+	then
+		eca_python_incdir=$d
+		break
+	fi
+done
+
+AC_SUBST(eca_python_incdir)
+if test "X$eca_python_incdir" = "X"
+then
+	AC_MSG_WARN([Python.h not found])
+else
+	AC_MSG_RESULT($eca_python_incdir)
+fi
+
+dnl ---
+dnl Python modules
+dnl ---
+AC_ARG_WITH(python-modules,
+	[  --with-python-modules=DIR install Python modules in DIR])
+
+if test "X$with_python_modules" = "X"
+then
+	pymoddirs="/usr/local/lib/python2.0 /usr/lib/python2.0 /usr/local/lib/python1.6 /usr/lib/python1.6 /usr/local/lib/python1.5 /usr/lib/python1.5 /usr/local/lib /usr/lib"
+else
+	pymoddirs=$with_python_modules
+fi
+
+AC_FIND_FILE(lib-dynload,$pymoddirs,eca_python_modules)
+dnl Use site-packages in preference if it is there.
+if test -d $eca_python_modules/site-packages
+then
+	eca_python_modules=$eca_python_modules/site-packages
+	eca_python_dlmodules=$eca_python_modules
+else
+	eca_python_dlmodules=$eca_python_modules/lib-dynload
+fi
+AC_SUBST(eca_python_modules)
+AC_SUBST(eca_python_dlmodules)
+
+dnl ------------------------------------------------------------------
+
 dnl ---
 dnl Checks for typedefs, structures, and compiler characteristics.
 dnl ---
 dnl AC_C_CONST
 AC_C_BIGENDIAN
 AC_TYPE_SIZE_T
+
+dnl ------------------------------------------------------------------
 
 dnl ---
 dnl Create outputs 
@@ -334,6 +431,9 @@ libecasound/Makefile
 libecasound/ecasound-config
 libecasound/plugin-paths.h
 libecasound/plugins/Makefile
+libecasoundc/Makefile
+libecasoundc/ecasoundc-config
+pyecasound/Makefile
 ecasound/Makefile
 ecatools/Makefile
 kvutils/Makefile
@@ -345,8 +445,14 @@ Documentation/programmers_guide/Makefile
 # And a short summary 
 echo "-----------------------------------------------------------------"
 echo "Following packages are now configured:"
-echo "ecasound: 		yes (ecasound,libecasound,libkvutils)"
+echo "ecasound: 		yes (ecasound,libecasound,libecasoundc)"
 echo "ecatools: 		yes"
+if test x$eca_python_incdir = x ; then
+	echo "pyecasound: 		no"
+else
+	echo "pyecasound: 		yes"
+fi
+echo "libkvutils: 		yes"
 echo "-----------------------------------------------------------------"
 echo "Following features were selected:"
 if test x$include_debug = xyes ; then
@@ -401,6 +507,8 @@ fi
 echo "-----------------------------------------------------------------"
 echo "Following directories are used:"
 echo "Directory prefix:		"$prefix
+echo "Python include dir:		"$eca_python_incdir
+echo "Python module dir:		"$eca_python_modules
 if test x$enable_sysreadline = xyes ; then
   	echo "readline includes:		"$readline_includes
 fi  
