@@ -209,6 +209,7 @@ void OSSDEVICE::start(void) {
 long OSSDEVICE::position_in_samples(void) const { 
   if (is_running() != true) return(0);
   if ((oss_caps & DSP_CAP_REALTIME) == DSP_CAP_REALTIME) {
+    cerr << "(audioio-oss) cap_realtime" << endl;
     count_info info;
     info.bytes = 0;
     if (io_mode() == io_read) {
@@ -219,6 +220,7 @@ long OSSDEVICE::position_in_samples(void) const {
     }
     return(info.bytes / frame_size());
   }
+  cerr << "(audioio-oss) not cap_realtime" << endl;
   struct timeval now;
   gettimeofday(&now, NULL);
   double time = now.tv_sec * 1000000.0 + now.tv_usec -
