@@ -379,8 +379,9 @@ void WAVEFILE::write_samples(void* target_buffer, long int samples) {
 }
 
 void WAVEFILE::seek_position(void) {
-  if (is_open())
+  if (is_open()) {
     fio_repp->set_file_position(data_start_position_rep + position_in_samples() * frame_size());
+  }
 }
 
 void WAVEFILE::set_length_in_bytes(void) {
